2013-02-20 Roman
- !!:DAQ.DCON: Significant changes from Almaz Karimov:
    - analog inputs reading of one methods is added;
    - the method 1AO (#AA) (blocks NL-1AO, I-7021, ADAM-4021) working is fixed;
    - the method 4AO (#AACN) is added for working with block ADAM-4024;
    - the digital inputs reading methods @AA is replaced to $AA6 for compatibility with ADAM blocks;
    - the digital outputs writing methods 4DO (#AA000F), 8DO (#AA00FF), 12DO (#AA000FFF) is added for working with ADAM blocks.


2013-02-19 Roman
- !!:DB.LibsDB, DB.ModelsDB.AGLKS: Documents formating some updated. Some other bugs is fixed.
    Now the DBs will often updated for fast improving and fixing direct into SQLite DB files.
- DAQ.JavaLikeCalc: Assigns separating by symbol ',' is added to the language for like the constructions:
    var1=1, var2=3, var4=var1+var2;
    for(var1=0, var2=0, var3=-1; var1 < 10; var1++, var2++) var3++;
- UI.WebVision: Attribute "width='100%'" is added to primitive's "Protocol" table for fill full the widget width.
- UI.Vision: Symbols '\n' process is added into attribute "name" of "Button" type of primitive "FormEl" for multiple line text
    into buttons show allow.


2013-02-14 Roman
- FIX:UI.VCAEngine: Lock session on enabling try pages with broken child widgets, like no parrent set, is fixed
    and the error ignored for full project start.
- FIX:UI.VCAEngine: Global attributes translation read for field "CFG_VAL" is fixed.
- FIX:UI.Vision: Attributes change for group widgets and for equal to first attribute value into the group is fixed.


2013-02-12 Roman
- FIX:DAQ.BlockCalc: Parameter's attributes first checking for remove is removed for prevent to free linked but present attributes.
- DAQ.DCON: Diagnostic protocol requests is added for messages level "Debug (0)".
- FIX:DAQ.JavaLikeCalc: Unaligned access for double and integer constants is fixed for some ARM-processors.